--- a/index.html
+++ b/index.html
@@ -2,9 +2,14 @@
 
 <html>
   <head>
-    <h1>Hello World!
-    </h1>
+    <title> Title </title>
   </head>
+  
+  <body> 
+    <h1> Hello </h1>
+  </body>
+  
+  
 </html>
 
 
