--- a/index.html
+++ b/index.html
@@ -4,12 +4,10 @@
   <head>
     <title> Title </title>
   </head>
-  
   <body> 
-    <h1> Hello </h1>
+    <h1> Header </h1>
+    <p> Paragraph </p>
   </body>
-  
-  
 </html>
 
 
