--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 
 <html>
   <head>
-    <title> Title </title>
-    <hr>
+    <title> DLCNC8 </title>
   </head>
   <body> 
     <h1> Header </h1>
+    <hr>
     <p> Paragraph </p>
   </body>
 </html>
